Added authentication to React app using keycloak.
